add ngx_http_dyups_module & ngx_http_upstream_check_module